[project]
name = "manychat-qualifier"
version = "0.2.0"
description = "Backend de cualificación inteligente ManyChat + Notion + Calendly"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "anthropic>=0.39",
    "httpx>=0.27",
    "pydantic>=2.9",
]
